<resources>
    <string name="app_name">Flex Mobile SDK</string>
    <string name="title_activity_tokens">Create Token</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Create Transient Token</string>
    <string name="second_fragment_label">Transient Token Reponse</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="item_price">Item price:</string>
    <string name="item_name">Item name:</string>

    <string name="pay_not_ready">Android Pay Not Ready</string>
    <string name="set_it_up">Set it up using the Android Pay app, and you�ll be all set to pay with Authorize.net.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="data_descriptor">"Data Descriptor :  "</string>
    <string name="data_value">"Data Value:  "</string>
    <string name="decision">"Decision: "</string>
    <string name="tokenError">"Token Error Response:"</string>
    <string name="tokenSuccess">"Token Response:"</string>
    <string name="cvv">CVV</string>
    <string name="card_number">Card Number</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="progress_message">Fetching Token for given Card Data...</string>
    <string name="session_progress_message">Creating Session for given context...</string>
    <string name="progress_title">Please Wait</string>
    <string name="button_text_token">Tokenize</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="invalid_card_number">Invalid Card Number</string>
    <string name="invalid_month">Invalid Month</string>
    <string name="two_digit_month">Two Digit Month Required</string>
    <string name="invalid_year">Invalid Year</string>
    <string name="invalid_cvv">Invalid CVV</string>
    <string name="app_description">This sample application will demonstrate how to leverage the mobile SDK to accept payment data in native mobile applications.</string>
    <string name="flex_mobile_sdk_name">Flex Mobile SDK</string>
    <string name="see_documentation_link">See documentation  <a href="https://developer.cybersource.com/">LINK</a></string>
    <string name="title_activity_flex_response">FlexResponseActivity</string>
    <string name="title_activity_tokens_response">Transient Token</string>
    <string name="title_activity_token_response">TokenResponseActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="token_response_description">The response to a successful token request is a transient token. This data construct can be used in liue of the payment information captured.</string>
    <string name="button_text_repeat_demo">Repeat demo</string>

</resources>